# seroja-react

./: README.md  bun.lockb  index.html  package-lock.json  package.json  vite.config.js  vite.config.js.timestamp-1713259859263-c0147332640f3.mjs
dev-dist/: sw.js
src/: App.css  App.jsx  main.jsx  print.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/auth/: login.rs  token.rs
src-tauri/src/barang/: delete_barang.rs  get_barang.rs  mod.rs  post_barang.rs  update_barang.rs
src-tauri/src/kategori/: delete_kategori.rs  get_kategori.rs  mod.rs  post_kategori.rs
src-tauri/src/laporan/: get_laporan.rs  mod.rs  post_laporan.rs
src-tauri/src/pelanggan/: delete_pelanggan.rs  get_pelanggan.rs  mod.rs  post_pelanggan.rs
src/auth/: RequireAuth.jsx
src/components/: BarangJual.jsx  Cart.jsx  CartEcer.jsx  CartPenjual.jsx  ExportToExcel.jsx  LaporanButtons.jsx  Layout.jsx  PembelianButtons.jsx  TableBarang.jsx  TambahKategori.jsx  TambahPelanggan.jsx  TambahPengeluaran.jsx
src/components/layouts/: Content.jsx  Drawser.jsx  Header.jsx  Navbar.jsx  Sidebar.jsx
src/pages/: AllPayment.jsx  Barang.jsx  Ecer.jsx  Ecer2.jsx  Invoice.jsx  Kategori.jsx  Laporan.jsx  Login.jsx  Logout.jsx  NoPage.jsx  Pelanggan.jsx  Pembelian.jsx  Pengeluaran.jsx  Penjual.jsx  Register.jsx  invoice.css
src/stores/: authSlice.js
src/utility/: updateStok.js
