[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = "1.0.188"
futures = "0.3.30"
tauri = { version = "1.6.0", features = [] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio = {version = "1.32.0", features = ["full"] }
chrono = "0.4" # Used for setting DateTimes
dirs = "3.0"

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
